# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: Image.hpp
src/: CMakeLists.txt  Image.cpp
